@@ -1,3 +1,8 @@
+2014-07-07  Corinna Vinschen  <corinna@vinschen.de>
+
+	* passwd.cc (pg_ent::enumerate_ad): Revert to simply skipping a domain
+	if opening the connection to the domain fails.
+
 2014-07-07  Pierre Humblet  <Pierre.Humblet@ieee.org>
 	    Corinna Vinschen  <corinna@vinschen.de>
 
